config: fix testng dependency conflict bugs